--- a/_config.yml
+++ b/_config.yml
@@ -18,4 +18,4 @@ periods:
   - events:
     - Septiembre 2017: "🔬 Inicio de los estudios de Grado en Biología"
     - Julio 2021: "🧑🏼‍🎓 Finalización de los estudios de Grado en Biología"
-  - name: Granada
+  #- name: Granada
