--- a/_config.yml
+++ b/_config.yml
@@ -31,4 +31,5 @@ periods:
     - Abril 2022: "💻 Realización de curso: MOOC Machine Learning y Big Data para la Bioinformática, Abierta ugr, 100."
     - Julio 2022: "🥳 Publicación de mi primer artículo: Una Calculadora de Genes para enseñar mendelismo, interacciones génicas y ligamiento."
     - Agosto 2022: "🤿 Acreditación de buzo de aguas abiertas (PADI)."
+    - Septiembre 2022: "🥳 Publicación de mi primer artículo en inglés: Using Excel Mapper to Design Chromosome Idiograms"
   #- name: Granada
