--- a/_config.yml
+++ b/_config.yml
@@ -32,4 +32,5 @@ periods:
     - Julio 2022: "🥳 Publicación de mi primer artículo: Una Calculadora de Genes para enseñar mendelismo, interacciones génicas y ligamiento."
     - Agosto 2022: "🤿 Acreditación de buzo de aguas abiertas (PADI)."
     - Septiembre 2022: "🥳 Publicación de mi primer artículo en inglés: Using Excel Mapper to Design Chromosome Idiograms"
+    - Septiembre 2022: "🧬 Inicio Máster de Genética y Evolución, Universidad de Granada"
   #- name: Granada
