--- a/_config.yml
+++ b/_config.yml
@@ -33,4 +33,5 @@ periods:
     - Agosto 2022: "🤿 Acreditación de buzo de aguas abiertas (PADI)."
     - Septiembre 2022: "🥳 Publicación de mi primer artículo en inglés: Using Excel Mapper to Design Chromosome Idiograms"
     - Septiembre 2022: "🧬 Inicio de Máster Universitario en Genética y Evolución, Universidad de Granada"
+    - Octubre 2022: "🟢 Participación en la exposición: “Bicentenario del Nacimiento de Gregor Mendel (1822-2022)”"
   #- name: Granada
