--- a/_config.yml
+++ b/_config.yml
@@ -34,4 +34,5 @@ periods:
     - Septiembre 2022: "🥳 Publicación de mi primer artículo en inglés y con índice JCR: Using Excel Mapper to Design Chromosome Idiograms"
     - Septiembre 2022: "🧬 Inicio de Máster Universitario en Genética y Evolución, Universidad de Granada"
     - Octubre 2022: "🟢 Participación en la exposición: “Bicentenario del Nacimiento de Gregor Mendel (1822-2022)”"
+    - Noviembre 2022: " 🥼Participación en la semada de la ciencia en la Universidad de Granada"
   #- name: Granada
