--- a/_config.yml
+++ b/_config.yml
@@ -34,5 +34,7 @@ periods:
     - Septiembre 2022: "🥳 Publicación de mi primer artículo en inglés y con índice JCR: Using Excel Mapper to Design Chromosome Idiograms"
     - Septiembre 2022: "🧬 Inicio de Máster Universitario en Genética y Evolución, Universidad de Granada"
     - Octubre 2022: "🟢 Participación en la exposición: “Bicentenario del Nacimiento de Gregor Mendel (1822-2022)”"
-    - Noviembre 2022: " 🥼Participación en la semana de la ciencia en la Universidad de Granada"
+    - Noviembre 2022: "🥼 Participación en la semana de la ciencia en la Universidad de Granada"
+    - Julio 2023: "🧬 Finalización de los estudios de Máster Universitario en Genética y Evolución, Universidad de Granada"
+    - Julio 2023: "👨‍‍🏫 Participación en el Congreso Estatal de Estudiantes de Biociencias con el póster: Caracterización de las regiones centroméricas del lenguado senegalés (Solea senegalensis, Kaup 1858)"
   #- name: Granada
