--- a/_config.yml
+++ b/_config.yml
@@ -36,5 +36,5 @@ periods:
     - Octubre 2022: "🟢 Participación en la exposición: “Bicentenario del Nacimiento de Gregor Mendel (1822-2022)”"
     - Noviembre 2022: "🥼 Participación en la semana de la ciencia en la Universidad de Granada"
     - Julio 2023: "🧬 Finalización de los estudios de Máster Universitario en Genética y Evolución, Universidad de Granada"
-    - Julio 2023: "👨‍‍🏫 Participación en el Congreso Estatal de Estudiantes de Biociencias con el póster: Caracterización de las regiones centroméricas del lenguado senegalés (Solea senegalensis, Kaup 1858)"
+    - Julio 2023: "🏫 Participación en el Congreso Estatal de Estudiantes de Biociencias con el póster: Caracterización de las regiones centroméricas del lenguado senegalés (Solea senegalensis, Kaup 1858)"
   #- name: Granada
