--- a/_config.yml
+++ b/_config.yml
@@ -37,4 +37,5 @@ periods:
     - Noviembre 2022: "🥼 Participación en la semana de la ciencia en la Universidad de Granada"
     - Julio 2023: "🧬 Finalización de los estudios de Máster Universitario en Genética y Evolución, Universidad de Granada"
     - Julio 2023: "🏫 Participación en el Congreso Estatal de Estudiantes de Biociencias con el póster: Caracterización de las regiones centroméricas del lenguado senegalés (Solea senegalensis, Kaup 1858)"
+    - Septiembre 2023: "💻 Inicio de Máster Universitario en Bioinformática y Bioestadística"
   #- name: Granada
