--- a/_config.yml
+++ b/_config.yml
@@ -38,5 +38,6 @@ periods:
     - Julio 2023: "🧬 Finalización de los estudios de Máster Universitario en Genética y Evolución, Universidad de Granada"
     - Julio 2023: "🏫 Participación en el Congreso Estatal de Estudiantes de Biociencias con el póster: Caracterización de las regiones centroméricas del lenguado senegalés (Solea senegalensis, Kaup 1858)"
     - Septiembre 2023: "💻 Inicio de Máster Universitario en Bioinformática y Bioestadística"
+    - Junio 2023: "🏫 Participación en el congreso de la Sociedad Española de Genética (2023). “Divergence and genomic evolution of repetitive elements in the sole Solea senegalensis”"
     - Noviembre 2023: "🥼 Contratado como investigador licenciado de la Universidad de Murcia"
   #- name: Granada
