--- a/_config.yml
+++ b/_config.yml
@@ -40,4 +40,5 @@ periods:
     - Septiembre 2023: "💻 Inicio de Máster Universitario en Bioinformática y Bioestadística"
     - Junio 2023: "🏫 Participación en el congreso de la Sociedad Española de Genética (2023). “Divergence and genomic evolution of repetitive elements in the sole Solea senegalensis”"
     - Noviembre 2023: "🥼 Contratado como investigador licenciado de la Universidad de Murcia"
+    - Febrero 2024: "🥳 Publicación de mi primer artículo en Q1: The genomic study of repetitive elements in Solea senegalensis reveals multiple impacts of transposable elements in the evolution and architecture of Pleuronectiformes chromosomes"
   #- name: Granada
