--- a/_config.yml
+++ b/_config.yml
@@ -41,4 +41,7 @@ periods:
     - Junio 2023: "🏫 Participación en el congreso de la Sociedad Española de Genética (2023). “Divergence and genomic evolution of repetitive elements in the sole Solea senegalensis”"
     - Noviembre 2023: "🥼 Contratado como investigador licenciado de la Universidad de Murcia"
     - Febrero 2024: "🥳 Publicación de mi primer artículo en Q1: The genomic study of repetitive elements in Solea senegalensis reveals multiple impacts of transposable elements in the evolution and architecture of Pleuronectiformes chromosomes"
+    - Agosto 2024: "🥼 Fin del contrato de investigador licenciado de la Universidad de Murcia"
+    - Diciembre 2024: "🥳 Nueva publicación: Automatic counting and identification of two Drosophila melanogaster (Diptera: Drosophilidae) morphs with image-recognition artificial intelligence"
+    - Febrero 2025: "💻 Finalización de los estudios de Máster en Bioinformática y Bioestadística, UOC"
   #- name: Granada
