--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ periods:
     - Noviembre 2023: "🥼 Contratado como investigador licenciado de la Universidad de Murcia"
     - Febrero 2024: "🥳 Publicación de mi primer artículo en Q1: The genomic study of repetitive elements in Solea senegalensis reveals multiple impacts of transposable elements in the evolution and architecture of Pleuronectiformes chromosomes"
     - Agosto 2024: "🥼 Fin del contrato de investigador licenciado de la Universidad de Murcia"
+    - Octubre 2024: "🧠 Inicio prácticas curriculares en el área de Cognición y Plasticidad Cerebral de IDIBELL"
     - Diciembre 2024: "🥳 Nueva publicación: Automatic counting and identification of two Drosophila melanogaster (Diptera: Drosophilidae) morphs with image-recognition artificial intelligence"
+    - Enero 2025: "🧠 Fin prácticas curriculares en el área de Cognición y Plasticidad Cerebral de IDIBELL"
     - Febrero 2025: "💻 Finalización de los estudios de Máster en Bioinformática y Bioestadística, UOC"
   #- name: Granada
